--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
   <h1>Bienvenido a la aplicacion desplegada con GitOps</h1>
-  <p>Esta es una prueba de CI/CD con GitHub Actions, Kubernetes y ArgoCD modificado</p>
+  <p>Esta es una prueba de CI/CD con GitHub Actions, Kubernetes y ArgoCD modificadogit add .</p>
 </body>
 </html>
